2007-12-22  Badlop  <badlop@process-one.net>

	* src/mod_announce.erl: Fixed unnoticeable bug related to Node
	matching. Renamed some nonstandard node names according to
	XEP-0133. Small reordering of clauses. When editing MOTD, display
	current value (EJAB-475)

2007-12-22  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_sm.erl: change incoming_presence_hook to
	presence_probe_hook
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: send last pep item bugfix and
	broadcast optimization (EJAB-468) (EJAB-467) (EJAB-460) (EJAB-469)
	* src/mod_pubsub/pubsub.hrl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise

2007-12-22  Badlop  <badlop@process-one.net>

	* src/mod_caps.erl: Bugfix in timeout checking. Check for timeout
	when an error response is received, and also before querying

2007-12-21  Badlop  <badlop@process-one.net>

	* src/ejabberd_ctl.erl: Added new command: mnesia (thanks to
	Tsukasa Hamano)

2007-12-21  Mickael Remond  <mremond@process-one.net>

	* src/msgs/fr.msg: Updated French translation (EJAB-295)

2007-12-21  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: disco#items bugfix (EJAB-465)

2007-12-21  Badlop  <badlop@process-one.net>

	* src/msgs/uk.msg: Updated (thanks to Ruslan Rakhmanin)

	* src/msgs/de.msg: Updated (thanks to Nikolaus Polak and Cord
	Beermann)

	* contrib/extract_translations/prepare-translation.sh: Small fix

2007-12-20  Badlop  <badlop@process-one.net>

	* src/mod_caps.erl: Don't include the Node attribute from C
	element in the disco#info query

2007-12-20  Christophe Romain <christophe.romain@process-one.net>

	* doc/guide.tex: Explain how to launch installer and improve
	ejabberdctl usage example (EJAB-420)
	* doc/guide.html: Likewise

	* src/mod_pubsub/mod_pubsub.erl: PEP notification bugfix

	* src/odbc/odbc_queries.erl: User count performance improvements
	(EJAB-239)

2007-12-20  Badlop  <badlop@process-one.net>
