@@ -1,5 +1,8 @@
 2007-12-22  Badlop  <badlop@process-one.net>
 
+	* src/web/ejabberd_http.erl: Add 'http_bind' option for easy
+	configuration of HTTP-Binding
+
 	* src/mod_announce.erl: Fixed unnoticeable bug related to Node
 	matching. Renamed some nonstandard node names according to
 	XEP-0133. Small reordering of clauses. When editing MOTD, display
